--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.8.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
