--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-leaflet": "^2.8.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.2.1",
-    "styled-icons": "^10.23.0"
+    "styled-icons": "^10.23.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
